--- a/spring-mvc-recipe/src/main/resources/templates/index.html
+++ b/spring-mvc-recipe/src/main/resources/templates/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <title>Recipe Home - welcome</title>
 </head>
 <body>
 	<h1>My Recipes...</h1>
+	<table>
+		<tr>
+			<th>ID</th>
+			<th>description</th>
+<!-- 			<th>prepTime</th> -->
+<!-- 			<th>cookTime</th> -->
+<!-- 			<th>servings</th> -->
+<!-- 			<th>source</th> -->
+<!-- 			<th>url</th> -->
+<!-- 			<th>directions</th> -->
+		</tr>
+		<tr th:each="recipe: ${recipes}">
+			<td th:text="${recipe.id}" />
+			<td th:text="${recipe.description}" />
+<!-- 			<td th:text="${recipe.prepTime}" /> -->
+<!-- 			<td th:text="${recipe.cookTime}" /> -->
+<!-- 			<td th:text="${recipe.servings}" /> -->
+<!-- 			<td th:text="${recipe.source}" /> -->
+<!-- 			<td th:text="${recipe.url}" /> -->
+<!-- 			<td><p th:text="${recipe.directions}"></p></td> -->
+		</tr>
+	</table>
 </body>
 </html>
