--- a/07-lombok-recipe/src/main/resources/templates/index.html
+++ b/07-lombok-recipe/src/main/resources/templates/index.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-<title>Recipe Home - welcome</title>
+    <meta charset="UTF-8"/>
+    <title>Recipe Home</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-	<h1>My Recipes...</h1>
-	<table>
-		<tr>
-			<th>ID</th>
-			<th>description</th>
-<!-- 			<th>prepTime</th> -->
-<!-- 			<th>cookTime</th> -->
-<!-- 			<th>servings</th> -->
-<!-- 			<th>source</th> -->
-<!-- 			<th>url</th> -->
-<!-- 			<th>directions</th> -->
-		</tr>
-		<tr th:each="recipe: ${recipes}">
-			<td th:text="${recipe.id}" />
-			<td th:text="${recipe.description}" />
-<!-- 			<td th:text="${recipe.prepTime}" /> -->
-<!-- 			<td th:text="${recipe.cookTime}" /> -->
-<!-- 			<td th:text="${recipe.servings}" /> -->
-<!-- 			<td th:text="${recipe.source}" /> -->
-<!-- 			<td th:text="${recipe.url}" /> -->
-<!-- 			<td><p th:text="${recipe.directions}"></p></td> -->
-		</tr>
-	</table>
+
+<div class="container-fluid" style="margin-top: 20px">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-primary">
+
+                <div class="panel-heading">
+                    <h1 class="panel-title">My Recipes!</h1>
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
+                        <table class="table table-hover ">
+                            <thead class="thead-inverse">
+                            <tr>
+                                <th>ID</th>
+                                <th>Description</th>
+                            </tr>
+                            </thead>
+<!--                             removed at runtime, but natural template in browser allow us to see how it looks -->
+                            <tr th:remove="all">
+                                <td th:text="${recipe.id}">123</td>
+                                <td th:text="${recipe.description}">Tasty Goodnees 1</td>
+                            </tr>
+                            <tr th:remove="all">
+                                <td th:text="${recipe.id}">12333</td>
+                                <td th:text="${recipe.description}">Tasty Goodnees 2</td>
+                            </tr>
+                            
+<!--                             replaced at runtime -->
+                            <tr th:each="recipe : ${recipes}">
+                                <td th:text="${recipe.id}">334</td>
+                                <td th:text="${recipe.description}">Tasty Goodnees 3</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
