--- a/09-CRUD Operations with Spring MVC/src/main/resources/templates/index.html
+++ b/09-CRUD Operations with Spring MVC/src/main/resources/templates/index.html
@@ -3,18 +3,10 @@
 <head>
 <meta charset="UTF-8" />
 <title>Recipe Home</title>
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	crossorigin="anonymous"
-	th:href="@{/webjars/bootstrap/4.5.2/css/bootstrap.min.css}">
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.2/css/bootstrap.min.css}">
+<script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
+<script src="/webjars/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<!-- <script th:src="@{webjars/jquery/3.5.1/jquery.min.js}"></script> -->
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-	integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-	crossorigin="anonymous"></script>
-<!-- 	th:src="@{webjars/bootstrap/4.5.2/js/bootstrap.min.js}" -->
 </head>
 <body>
 
