added Internationalization (i18n)+ validation + tests

--- a/09-CRUD Operations with Spring MVC/src/main/resources/templates/recipe/ingredient/list.html
+++ b/09-CRUD Operations with Spring MVC/src/main/resources/templates/recipe/ingredient/list.html
@@ -9,8 +9,8 @@
 <script src="/webjars/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
-<!--/*@thymesVar id="ingredients" type="java.util.Set<guru.springframework.commands.IngredientCommand>"*/-->
+<!--/*@thymesVar id="recipe" type="com.mkejeiri.recipe.domain.Recipe"*/-->
+<!--/*@thymesVar id="ingredients" type="java.util.Set<com.mkejeiri.recipe.command.IngredientCommand>"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
