--- a/09-CRUD Operations with Spring MVC/src/main/resources/templates/index.html
+++ b/09-CRUD Operations with Spring MVC/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-<!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
+<!--/*@thymesVar id="recipe" type="com.mkejeiri.recipe.domain.Recipe"*/-->
 	<div class="container-fluid" style="margin-top: 20px">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
