--- a/10-spring-mvc-validation-constraints/src/main/resources/templates/recipe/imageuploadform.html
+++ b/10-spring-mvc-validation-constraints/src/main/resources/templates/recipe/imageuploadform.html
@@ -9,7 +9,7 @@
 <script src="/webjars/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
+<!--/*@thymesVar id="recipe" type="com.mkejeiri.recipe.domain.Recipe"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
