--- a/Project-sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/Project-sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -20,5 +20,24 @@
 			<td th:text="${vet?.lastName}" />
 		</tr>
 	</table>
+	<hr>
+	<h2>Veterinarians</h2>
+	<table id="vets" class="table table-striped">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Specialities</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="vet : ${vets}">
+				<td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+				<td><span th:each="specialty : ${vet.specialities}"
+					th:text="${specialty.description + ' '}" /> 
+					<span th:if="${vet?.specialities?.size() == 0}">none</span>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
